Increase light intensity of 3d model on light mode, fix fancy-header component on mobile

--- a/src/components/fancy-header/fancy-header.module.scss
+++ b/src/components/fancy-header/fancy-header.module.scss
@@ -18,7 +18,7 @@
 @media screen and (max-width: breakpoints.$forkitall-breakpoint-xs) {
   .fancyHeader::after {
     bottom: 15px;
-    height: 10px;
+    height: 15px;
   }
 }
 
